--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,7 +20,7 @@ html {
   --primary-400: #38bec9;
   --primary-500: #b78dce;
   --primary-600: #14919b;
-  --primary-700: #0e7c86;
+  --primary-700: #9263ac;
   --primary-800: #0a6c74;
   --primary-900: #044e54;
 
